--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "eslint": "eslint --color ./",
     "precommit": "npm run eslint"
   },
-
   "dependencies": {
     "bunyan": "^1.8.12",
     "crypto-js": "^3.1.9-1",
@@ -31,7 +30,8 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.7.6",
-    "js-md5": "^0.7.3"
+    "js-md5": "^0.7.3",
+    "mysql2": "^1.6.4"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
