--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport-local": "^1.0.0",
     "sequelize": "^5.7.6",
     "js-md5": "^0.7.3",
-    "mysql2": "^1.6.4"
+    "mysql2": "^1.6.4",
+    "koa2-cors": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
